test/spec_vectors/nop/fail/module_1.wat
(module (func $type-i32 (result i32) (nop)))